validaciones fecha inicio obra construccion

--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/programacion-obra-flujo-inversion/programacion-obra-flujo-inversion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/programacion-obra-flujo-inversion/programacion-obra-flujo-inversion.component.html
@@ -10,7 +10,7 @@
 
         <div>
                 <button mat-raised-button color="accent" type="submit" (click)="cargarProgramacion()"
-                        [disabled]="archivoCargueIdProgramacionObra !== undefined">
+                        [disabled]="(archivoCargueIdProgramacionObra !== undefined || fechaInicioObra === undefined)">
                         Cargar programación
                 </button>
         </div>
