--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/datos-del-proyecto/datos-del-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/datos-del-proyecto/datos-del-proyecto.component.html
@@ -9,55 +9,55 @@
       <strong>
         Tipo de intervención:
       </strong>
-      Remodelación
+      {{ report.proyecto.tipoIntervencionString }}
     </p>
     <p>
       <strong>
         Institución educativa:
       </strong>
-      I.E. María Villa Campo
+      {{ report.proyecto.institucionEducativa.nombre }}
     </p>
     <p>
       <strong>
         Sede educativa:
       </strong>
-      Única sede
+      {{ report.proyecto.sede.nombre }}
     </p>
     <p>
       <strong>
         Departamento:
       </strong>
-      Atlántico
+      {{ report.proyecto.departamentoObj.descripcion }}
     </p>
     <p>
       <strong>
         Municipio:
       </strong>
-      Manatí
+      {{ report.proyecto.municipioObj.descripcion }}
     </p>
     <p>
       <strong>
         Número de contrato de obra:
       </strong>
-      CC223456789
+      {{ report.numeroContratoObra }}
     </p>
     <p>
       <strong>
         Nombre del contratista de obra:
       </strong>
-      Constructora Colpatria SAS
+      {{ report.nombreContratistaObra }}
     </p>
     <p>
       <strong>
         Número de contrato de interventoría:
       </strong>
-      CI8769-98076
+      {{ report.numeroContratoInterventoria }}
     </p>
     <p>
       <strong>
         Nombre de contratista de interventoría:
       </strong>
-      Constructora Bolivar
+      {{ report.nombreContratistaInterventoria }}
     </p>
   </mat-card-content>
 </mat-card>
@@ -73,18 +73,18 @@
       <strong>
         URL Acta de recibo a satisfaccion - Obra:
       </strong>
-      https://drive.google.com/drive/LJ776554/actadereciboasatisfaccion-obra
+      {{ report.proyecto.informeFinal[0].urlActa }}
     </p>
     <p>
       <strong>
         Fecha de suscripción:
       </strong>
-      30/06/2020
+      {{ report.proyecto.informeFinal[0].fechaSuscripcion  | date:'dd/MM/yyyy' }}
     </p>
   </mat-card-content>
 </mat-card>
 
-<mat-card class="shipping-card var-main-gris">
+<mat-card class="shipping-card var-main-gris" *ngIf="existeObservacion">
   <mat-card-header class="header-card header-card--margin">
     <mat-card-title class="mat-card-title header-card--text">
       Verificación del apoyo a la supervisión
@@ -93,14 +93,17 @@
   <mat-card-content>
     <p>
       <strong>
-        25/11/2020
+        {{ report.proyecto.informeFinal[0].informeFinalObservaciones[0].fechaCreacion | date:'dd/MM/yyyy' }}
       </strong>
     </p>
     <p>
       <strong>
         ¿Tiene observaciones al recibo a satisfacción?:
       </strong>
-      No
+      <span *ngIf="report.proyecto.informeFinal[0].tieneObservacionesValidacion"> Si</span>
+      <span *ngIf="!report.proyecto.informeFinal[0].tieneObservacionesValidacion"> No</span>
+    </p>
+    <p *ngIf="report.proyecto.informeFinal[0].tieneObservacionesValidacion" [innerHTML]="report.proyecto.informeFinal[0].informeFinalObservaciones[0].observaciones">
     </p>
   </mat-card-content>
 </mat-card>
