--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/form-observaciones-recibo-satisfaccion/form-observaciones-recibo-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/form-observaciones-recibo-satisfaccion/form-observaciones-recibo-satisfaccion.component.html
@@ -1,16 +1,16 @@
-<form [formGroup]="observaciones" novalidate (ngSubmit)="onSubmit()">
+<form [formGroup]="observaciones" novalidate (ngSubmit)="onSubmit(false)">
   <div class="row justify-content-center align-items-center">
     <div class="col-md-12">
       <div class="row justify-content-center align-items-center" style="width: 100%">
         <div class="pr-1">
-          <label class="label-left" for="tieneObservaciones"> ¿Tiene observaciones al recibo a satisfacción? </label>
+          <label class="label-left" for="tieneObservacionesSupervisor"> ¿Desde la supervisión tiene observaciones al recibo a satisfacción? </label>
         </div>
         <div>
-          <mat-radio-group class="radioInput" formControlName="tieneObservaciones">
-            <mat-radio-button [value]="true" [checked]="observaciones.get('tieneObservaciones').value === true">
+          <mat-radio-group class="radioInput" formControlName="tieneObservacionesSupervisor">
+            <mat-radio-button [value]="true" [checked]="observaciones.get('tieneObservacionesSupervisor').value === true">
               Sí
             </mat-radio-button>
-            <mat-radio-button [value]="false" [checked]="observaciones.get('tieneObservaciones').value === false">
+            <mat-radio-button [value]="false" [checked]="observaciones.get('tieneObservacionesSupervisor').value === false">
               No
             </mat-radio-button>
           </mat-radio-group>
@@ -26,8 +26,8 @@
           matTooltip="Debe ingresar la información en el campo para continuar"
           matTooltipClass="info-tooltip"
           *ngIf="
-            (observaciones.get('tieneObservaciones').invalid && observaciones.get('tieneObservaciones').touched) ||
-            (observaciones.get('tieneObservaciones').invalid && estaEditando)
+            (observaciones.get('tieneObservacionesSupervisor').invalid && observaciones.get('tieneObservacionesSupervisor').touched) ||
+            (observaciones.get('tieneObservacionesSupervisor').invalid && estaEditando)
           "
         />
       </span>
@@ -35,7 +35,7 @@
   </div>
   <div
     class="d-flex mt-2em align-items-center animatedDown"
-    *ngIf="observaciones.value.tieneObservaciones == true"
+    *ngIf="observaciones.value.tieneObservacionesSupervisor == true"
     align="left"
   >
     <div
@@ -93,9 +93,9 @@
       class="btn-guardar"
       type="submit"
       [disabled]="
-        observaciones.get('tieneObservaciones').value === null ||
-        observaciones.get('tieneObservaciones').value === undefined ||
-        (observaciones.get('tieneObservaciones').value === true && observaciones.get('observaciones').invalid)
+        observaciones.get('tieneObservacionesSupervisor').value === null ||
+        observaciones.get('tieneObservacionesSupervisor').value === undefined ||
+        (observaciones.get('tieneObservacionesSupervisor').value === true && observaciones.get('observaciones').invalid)
       "
     >
       <img src="assets/img/icon/guardar.svg" alt="guardar" />
