--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -8,7 +8,12 @@
   <mat-accordion>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title"> Informe final y anexos </mat-panel-title>
+        <mat-panel-title class="expansion-style--title 
+        {{estadoAprobacion == '0' || estadoAprobacion == null || semaforo ? 
+          'sin-diligenciar' : estadoAprobacion == '1' ? 
+                'en-proceso' : 'completo' }}">
+                Informe final y anexos
+        </mat-panel-title>
       </mat-expansion-panel-header>
       <section class="text-center">
         <div class="d-flex align-items-center info-text en-alertaLibre">
@@ -24,7 +29,7 @@
                   No.
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  <b>{{ element.No }}</b>
+                  <b>{{ element.informeFinalListaChequeo.posicion }}</b>
                 </td>
               </ng-container>
 
@@ -34,60 +39,79 @@
                   Ítem
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.item }}
+                  {{ element.informeFinalListaChequeo.nombre }}
                 </td>
               </ng-container>
 
               <!-- calificacionInterventoria Column -->
-              <ng-container matColumnDef="calificacionInterventoria">
+              <ng-container matColumnDef="calificacionCodigoString">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>
                   Calificación interventoría
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.calificacionInterventoria }}
+                  {{ element.calificacionCodigoString }}
                 </td>
               </ng-container>
 
               <!-- tipoAnexo Column -->
-              <ng-container matColumnDef="tipoAnexo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Tipo de anexo
-                </th>
+              <ng-container matColumnDef="tipoAnexoString">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de anexo</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.tipoAnexo }}
+                  <div *ngIf="element.calificacionCodigo === '1'">
+                    <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                      {{ element.informeFinalAnexo.tipoAnexoString }}
+                    </span>
+                  </div>
                 </td>
               </ng-container>
 
               <!-- Ubicacion Column -->
               <ng-container matColumnDef="Ubicacion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Ubicación (url/radicado)
-                </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación (url/radicado)</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.Ubicacion }}
+                  <div
+                    *ngIf="element.calificacionCodigo === '1'"
+                    [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando"
+                  >
+                    <!--Físico-->
+                    <span *ngIf="element.informeFinalAnexo.tipoAnexo === '1'">
+                      <b>SAC:</b>
+                      {{ element.informeFinalAnexo.numRadicadoSac }} <br />
+                      <b>Fecha:</b>
+                      {{ element.informeFinalAnexo.fechaRadicado | date: 'dd/MM/yyyy' }}
+                    </span>
+                    <!--Digital-->
+                    <span *ngIf="element.informeFinalAnexo.tipoAnexo === '2'">
+                      {{ element.informeFinalAnexo.urlSoporte }}
+                    </span>
+                  </div>
                 </td>
               </ng-container>
 
+
               <!-- verificacion Column -->
-              <ng-container matColumnDef="verificacion">
+              <ng-container matColumnDef="validacionCodigoString">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>
                   Verificación
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.verificacion }}
+                  {{ element.validacionCodigoString }}
                 </td>
               </ng-container>
 
               <!-- validacion Column -->
-              <ng-container matColumnDef="validacion">
+              <ng-container matColumnDef="aprobacionCodigo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>
                   Verificación
                 </th>
                 <td mat-cell *matCellDef="let element">
                   <section class="slect-table-contain mt-1em">
                     <mat-form-field class="select-width">
-                      <mat-label>{{ element.validacion }}</mat-label>
-                      <mat-select [(ngModel)]="element.validacion" required>
+                      <mat-label *ngIf="element.validacionCodigo != null">
+                        <span *ngIf="element.aprobacionCodigo == null || element.aprobacionCodigo === '0'">{{ element.validacionCodigoString }}</span>
+                        <span *ngIf="element.aprobacionCodigo != null">{{ element.aprobacionCodigoString }}</span>
+                      </mat-label>
+                      <mat-select [(ngModel)]="element.aprobacionCodigo" (selectionChange)="changeState(element.aprobacionCodigo, element.validacionCodigo)" required>
                         <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
                           {{ estado.name }}
                         </mat-option>
@@ -101,7 +125,7 @@
                         [matTooltipPosition]="'above'"
                         matTooltip="Debe ingresar la información en el campo para continuar"
                         matTooltipClass="info-tooltip"
-                        *ngIf="element.verificacion === '' && estaEditando"
+                        *ngIf="element.aprobacionCodigo === '' && estaEditando"
                       />
                     </span>
                   </section>
@@ -115,7 +139,7 @@
                 </th>
                 <td mat-cell *matCellDef="let element">
                   <button
-                    *ngIf="element.verificacion === 'No cumple' || element.verificacion === 2"
+                    *ngIf="element.aprobacionCodigo === 2 || element.aprobacionCodigo ==='2'"
                     mat-button
                     color="warn"
                     mat-raised-button
@@ -126,7 +150,19 @@
                     type="button"
                     (click)="openDialogObservaciones(element)"
                   >
-                    Observaciones
+                  Observaciones
+                  </button>
+                  <button
+                    *ngIf="(element.validacionCodigo === '2' || element.validacionCodigo === 2) && !(element.aprobacionCodigo === 2 || element.aprobacionCodigo ==='2')"
+                    mat-button
+                    color="warn"
+                    mat-raised-button
+                    color="accent"
+                    class="btn-table animatedOpacity min-w-11em"
+                    type="button"
+                    (click)="openDialogObservaciones(element)"
+                  >
+                  Ver/Editar Observaciones
                   </button>
                 </td>
               </ng-container>
@@ -145,7 +181,7 @@
         </div>
 
         <div class="text-center">
-          <button mat-button color="warn" class="btn-guardar" (click)="onSubmit()">
+          <button mat-button color="warn" class="btn-guardar" (click)="onSubmit(false)">
             <img src="assets/img/icon/guardar.svg" alt="Guardar" />
           </button>
         </div>
