--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
@@ -70,14 +70,48 @@
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a
+        <button
+          *ngIf="element.estadoAprobacion === '3'"
+            mat-button
+            mat-raised-button
+            color="accent"
+            class="btn-table"
+            type="button"
+            (click)="sendFinalReportToInterventor(element.proyectoId)"
+          >
+          Enviar al interventor <!--Con observaciones  supervisor (3)-->
+        </button>
+        <button
+          *ngIf="element.estadoAprobacion === '4'"
+            mat-button
+            mat-raised-button
+            color="accent"
+            class="btn-table"
+            type="button"
+            (click)="sendFinalReportToFinalVerification(element.proyectoId)"
+          >
+          Enviar a verificación final <!--Con aprobación supervisor (4)-->
+        </button>
+        <a *ngIf="!(element.estadoAprobacion === '6' || element.estadoAprobacion === '2')"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           [routerLink]="['validar', element.proyectoId]"
         >
-        Validar informe
+          <span *ngIf="element.estadoAprobacion == null || element.estadoAprobacion === '0'">Validar informe</span> <!--Null o 0-->
+          <span *ngIf="element.estadoAprobacion != null && element.estadoAprobacion !== '0' && element.estadoAprobacion !== '6' && element.estadoAprobacion !== '4'">Ver detalle/Editar</span><!-- !== 6/4 -->
+        </a>
+        <a
+        *ngIf="element.estadoAprobacion === '6' || element.estadoAprobacion === '2'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          [routerLink]="['verDetalle', element.proyectoId]"
+        >
+          Ver detalle <!--Devuelta por supervisor (6) y enviado a liquidación (2)-->
         </a>
       </td>
     </ng-container>
