--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/detalle-factura-proyectos-asociados/detalle-factura-proyectos-asociados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/detalle-factura-proyectos-asociados/detalle-factura-proyectos-asociados.component.html
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div class="text-center mb-2em">
-                <button mat-button color="warn" class="btn-guardar" type="submit">
+                <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="projects.dirty === false">
                   <img src="assets/img/icon/guardar.svg">
                 </button>
             </div>
