--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
@@ -119,31 +119,26 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <!-- Se deshabilita mientras se termina el CU lista de chequeo, luego se valida con el siguiente campo 'registroCompletoAcordeones.registroCompletoSolicitudPago' -->
-                <mat-panel-title class="expansion-style--title" [ngClass]="enabledAcordeon( 'listaChequeo', registroCompletoAcordeones.registroCompletoListaChequeo )">
+                <mat-panel-title class="expansion-style--title" [ngClass]="enabledAcordeon( 'listaChequeo', registroCompletoAcordeones.registroCompletoSolicitudPago )">
                     Validar lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-validar-lista-chequeo [contrato]="contrato"></app-validar-lista-chequeo>
+
+            <app-validar-lista-chequeo [contrato]="contrato" *ngIf="registroCompletoAcordeones.registroCompletoSolicitudPago === true"></app-validar-lista-chequeo>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <!-- Temporalmente mientras se termina el CU listas de chequeo se validara el acordeon con el registro completo de solicitud de pago, luego se validara con el siguiente campo 'registroCompletoAcordeones.registroCompletoListaChequeo' mientras la solicitud no sea otros costos -->
                 <mat-panel-title    class="expansion-style--title"
-                                    [ngClass]="enabledAcordeon( 'soporteSolicitud', registroCompletoAcordeones.registroCompletoSolicitudPago )">
+                                    [ngClass]="enabledAcordeon( 'soporteSolicitud', registroCompletoAcordeones.registroCompletoListaChequeo )">
                     Soporte de la solicitud
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <!--
-                Validacion soporte solicitud
-                *ngIf="acordeones.tieneListaChequeo === true"
-            -->
-            <app-form-soporte-solicitud-url [solicitudPago]="contrato.solicitudPagoOnly" *ngIf="registroCompletoAcordeones.registroCompletoSolicitudPago === true"></app-form-soporte-solicitud-url>
+            <app-form-soporte-solicitud-url [solicitudPago]="contrato.solicitudPagoOnly" *ngIf="registroCompletoAcordeones.registroCompletoListaChequeo === true"></app-form-soporte-solicitud-url>
         </mat-expansion-panel>
     </mat-accordion>
-    <div style="margin-top: 1em;" *ngIf="contrato !== undefined">
+    <div style="margin-top: 1em;margin-bottom: 1em;">
         <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
             Los acordeones se habilitarán de forma secuencial, una vez se tenga completa la información de la
             sección anterior
