--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-cargar-forma-de-pago/form-cargar-forma-de-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-cargar-forma-de-pago/form-cargar-forma-de-pago.component.html
@@ -52,7 +52,7 @@
         </mat-card-content>
     </mat-card>
     <div class="text-center mb-2em">
-        <button mat-button color="warn" class="btn-guardar" type="submit">
+        <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.dirty === false">
             <img src="assets/img/icon/guardar.svg">
         </button>
     </div>
