--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.scss
@@ -7,3 +7,7 @@ table td{
     border-color: #474747;
     color: #474747;
 }
+
+.mat-button.mat-warn[disabled], .mat-button[disabled][disabled] {
+    opacity: .5;
+}
