--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
@@ -21,7 +21,7 @@
                     <td mat-cell *matCellDef="let element" align="center">
                         <div class="col">
                             <mat-form-field class="select-width">
-                                <mat-select required [(ngModel)]="element.respuestaCodigo">
+                                <mat-select required [(ngModel)]="element.respuestaCodigo" (ngModelChange)="disabledBtn()">
                                     <mat-option *ngFor="let revision of listaRevisionTecnica" [value]="revision.codigo">
                                         {{ revision.nombre }}
                                     </mat-option>
@@ -34,7 +34,7 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Observaciones </th>
                     <td mat-cell *matCellDef="let element; index as j" align="center">
                         <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==1" *ngIf="element.respuestaCodigo === noCumpleCodigo"
-                            (click)="getObservacion( element,i, j )">Observaciones</button>
+                            (click)="getObservacion( element, i, j )">Observaciones</button>
 
                         <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==2" *ngIf="element.item==2"
                             (click)="this.callSubsanacion()">Observaciones</button>
@@ -46,10 +46,10 @@
             </table>
             <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
         </div>
-        <div class="text-center mb-2em">
-            <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()">
-                <img src="assets/img/icon/guardar.svg" alt="Regresar">
-            </button>
-        </div>
     </mat-expansion-panel>
+    <div class="text-center mb-2em" *ngIf="solicitudPagoModificado.solicitudPagoListaChequeo.length > 0">
+        <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()" [disabled]="seDiligencioCampo === false">
+            <img src="assets/img/icon/guardar.svg" alt="Regresar">
+        </button>
+    </div>
 </mat-accordion>
