--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/datos-del-proyecto/datos-del-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/datos-del-proyecto/datos-del-proyecto.component.html
@@ -84,7 +84,7 @@
   </mat-card-content>
 </mat-card>
 
-<mat-card class="shipping-card var-main-gris" *ngIf="existeObservacion">
+<mat-card class="shipping-card var-main-gris" *ngIf="existeObservacionApoyo">
   <mat-card-header class="header-card header-card--margin">
     <mat-card-title class="mat-card-title header-card--text">
       Verificación del apoyo a la supervisión
