--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
@@ -91,10 +91,10 @@
               <!-- validacion Column -->
               <ng-container matColumnDef="aprobacionCodigo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Verificación
+                  Validación
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.aprobacionCodigo }}
+                  {{ element.aprobacionCodigoString }}
                 </td>
               </ng-container>
 
