Ajuste Fuentes de financiacion, validaciones al eliminar

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
@@ -1180,6 +1180,17 @@
       <button mat-button color="warn" class="btn-guardar" type="submit">
         <img src="assets/img/icon/guardar.svg" alt="Guardar" />
       </button>
+        <button
+          mat-button
+          color="warn"
+          *ngIf="addressForm.value.fuenteRecursosArray.length === 1"
+          type="button"
+          class="btn-eliminar"
+          (click)="borrarArray(fuenteRecursosArray, 0, 2, 0)"          
+        >
+          <img src="assets/img/icon/menos.svg" alt="Eliminar vigencia" />
+          Eliminar Registro
+        </button>
     </div>
   </form>
 </div>
