--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/form-observaciones-informe-final-anexos/form-observaciones-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/form-observaciones-informe-final-anexos/form-observaciones-informe-final-anexos.component.html
@@ -1,18 +1,16 @@
-<form [formGroup]="observaciones" novalidate (ngSubmit)="onSubmit(false)">
-  <div class="row justify-content-center align-items-center">
+<form [formGroup]="observaciones" novalidate (ngSubmit)="onSubmit()">
+  <div class="row justify-content-center align-items-center mt-2em">
     <div class="col-md-12">
       <div class="row justify-content-center align-items-center" style="width: 100%">
         <div class="pr-1">
-          <label class="label-left" for="tieneObservacionesValidacion"> ¿Tiene observaciones al recibo a satisfacción? </label>
+          <label class="label-left" for="tieneObservacionesValidacion">
+            ¿Desde el grupo de novedades y liquidaciones tiene observaciones al informe final y anexos?
+          </label>
         </div>
         <div>
           <mat-radio-group class="radioInput" formControlName="tieneObservacionesValidacion">
-            <mat-radio-button [value]="true" [checked]="observaciones.get('tieneObservacionesValidacion').value === true">
-              Sí
-            </mat-radio-button>
-            <mat-radio-button [value]="false" [checked]="observaciones.get('tieneObservacionesValidacion').value === false">
-              No
-            </mat-radio-button>
+            <mat-radio-button [value]="true"> Sí </mat-radio-button>
+            <mat-radio-button [value]="false"> No </mat-radio-button>
           </mat-radio-group>
         </div>
         <span class="required-form-group m-0 margin-required">*</span>
@@ -25,7 +23,8 @@
             matTooltip="Debe ingresar la información en el campo para continuar"
             matTooltipClass="info-tooltip"
             *ngIf="
-              (observaciones.get('tieneObservacionesValidacion').invalid && observaciones.get('tieneObservacionesValidacion').touched) ||
+              (observaciones.get('tieneObservacionesValidacion').invalid &&
+                observaciones.get('tieneObservacionesValidacion').touched) ||
               (observaciones.get('tieneObservacionesValidacion').invalid && estaEditando)
             "
           />
@@ -35,8 +34,7 @@
   </div>
   <div
     class="d-flex mt-2em align-items-center animatedDown"
-    *ngIf="observaciones.value.tieneObservacionesValidacion == true"
-    align="left"
+    *ngIf="observaciones.value.tieneObservacionesValidacion === true"
   >
     <div
       class="text-area-quill"
@@ -54,7 +52,7 @@
           )
         "
       >
-        Observaciones
+        Observaciones al informe final y anexos
       </label>
       <quill-editor
         class="quill-editor-style ml-1em"
@@ -86,6 +84,9 @@
       />
     </span>
   </div>
+
+  <app-tabla-historial-observaciones></app-tabla-historial-observaciones>
+
   <div class="text-center mb-2em">
     <button
       mat-button
@@ -98,7 +99,7 @@
         (observaciones.get('tieneObservacionesValidacion').value === true && observaciones.get('observaciones').invalid)
       "
     >
-      <img src="assets/img/icon/guardar.svg" alt="Regresar" />
+      <img src="assets/img/icon/guardar.svg" alt="Guardar" />
     </button>
   </div>
 </form>
