--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/gestionar-solicitud-rlc/gestionar-solicitud-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/gestionar-solicitud-rlc/gestionar-solicitud-rlc.component.html
@@ -53,7 +53,7 @@
                     Informe Final
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            /*/*/*
+            <app-tabla-informe-final-rlc></app-tabla-informe-final-rlc>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
