--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
@@ -162,7 +162,7 @@
                     1000
                 </span>
             </div>
-            <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()">
+            <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()" [disabled]="otrosCostosObsForm.dirty === false">
                 <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </form>
@@ -225,7 +225,7 @@
                     </span>
                 </div>
                 <button mat-button color="warn" class="btn-guardar"
-                    type="submit">
+                    type="submit" [disabled]="addressForm.dirty === false">
                     <img src="assets/img/icon/guardar.svg" alt="Guardar">
                 </button>
             </form>
