--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-amortizacion/form-amortizacion.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-amortizacion/form-amortizacion.component.scss
@@ -1,3 +1,7 @@
+.mat-button.mat-warn[disabled], .mat-button[disabled][disabled] {
+  opacity: .5;
+}
+
 .contenidoContrato{
     width: 100%;
     margin-top: 20px;
