--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-cargar-forma-pago/obs-cargar-forma-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-cargar-forma-pago/obs-cargar-forma-pago.component.html
@@ -61,7 +61,7 @@
                     1000
                 </span>
             </div>
-            <button mat-button color="warn" class="btn-guardar" type="submit">
+            <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.dirty === false">
                 <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </form>
