--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-registrar-solicitud-pago/obs-registrar-solicitud-pago.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-registrar-solicitud-pago/obs-registrar-solicitud-pago.component.scss
@@ -1,3 +1,7 @@
+.mat-button.mat-warn[disabled], .mat-button[disabled][disabled] {
+  opacity: .5;
+}
+
 table th {
     background-color: #474747;
     border-color: white;
