--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
@@ -163,7 +163,7 @@
                     1000
                 </span>
             </div>
-            <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()">
+            <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()" [disabled]="otrosCostosForm.dirty === false">
                 <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </form>
@@ -226,7 +226,7 @@
                     </span>
                 </div>
                 <button mat-button color="warn" class="btn-guardar"
-                    type="submit">
+                    type="submit" [disabled]="addressForm.dirty === false">
                     <img src="assets/img/icon/guardar.svg" alt="Guardar">
                 </button>
             </form>
