--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.scss
@@ -1,3 +1,7 @@
+.mat-button.mat-warn[disabled], .mat-button[disabled][disabled] {
+  opacity: .5;
+}
+
 .mx-1em {
   margin-left: 1em;
   margin-right: 1em;
