--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-criterio-pagos-autoriz/obs-criterio-pagos-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-criterio-pagos-autoriz/obs-criterio-pagos-autoriz.component.html
@@ -69,7 +69,7 @@
                         </span>
                     </div>
                     <button mat-button color="warn" class="btn-guardar"
-                        type="submit">
+                        type="submit" [disabled]="addressForm.dirty === false">
                         <img src="assets/img/icon/guardar.svg" alt="Guardar">
                     </button>
                 </ng-template>
