--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-datos-factura-autoriz/obs-datos-factura-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-datos-factura-autoriz/obs-datos-factura-autoriz.component.html
@@ -76,7 +76,7 @@
                 </span>
             </div>
             <button mat-button color="warn" class="btn-guardar mt1"
-                type="submit">
+                type="submit" [disabled]="addressForm.dirty === false">
                 <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </form>
