--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-desc-dir-tecnica-autoriz/obs-desc-dir-tecnica-autoriz.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-desc-dir-tecnica-autoriz/obs-desc-dir-tecnica-autoriz.component.scss
@@ -1,3 +1,7 @@
+.mat-button.mat-warn[disabled], .mat-button[disabled][disabled] {
+  opacity: .5;
+}
+
 .contenidoContrato{
     width: 100%;
     margin-top: 20px;
