--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
@@ -36,7 +36,7 @@
                     En proceso de firmas
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            */*/*/*/
+            <app-tabla-en-proceso-de-firmas-rlc></app-tabla-en-proceso-de-firmas-rlc>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
@@ -44,7 +44,7 @@
                     Liquidación
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            */*/*/*/
+            <app-tabla-liquidacion-rlc></app-tabla-liquidacion-rlc>
         </mat-expansion-panel>
     </mat-accordion>
 </div>
