--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-en-proceso-de-firmas-rlc/tabla-en-proceso-de-firmas-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-en-proceso-de-firmas-rlc/tabla-en-proceso-de-firmas-rlc.component.html
@@ -27,8 +27,10 @@
             <td mat-cell *matCellDef="let element"> <em>{{element.tipoContrato}}</em> </td>
         </ng-container>
         <ng-container matColumnDef="estadoRegistro">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
-            <td mat-cell *matCellDef="let element"> {{element.estadoRegistro}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro  </th>
+            <td mat-cell *matCellDef="let element"> 
+                <span class="info-text info-text__table" [ngClass]="{'sin-diligenciar' : element.estadoRegistro=='Incompleto', 'completo' : element.estadoRegistro=='Completo'}"></span>
+                {{element.estadoRegistro}} </td>
         </ng-container>
         <ng-container matColumnDef="estadoDocumento">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Esatdo del documento </th>
