--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-liquidacion-rlc/tabla-liquidacion-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-liquidacion-rlc/tabla-liquidacion-rlc.component.html
@@ -28,7 +28,9 @@
         </ng-container>
         <ng-container matColumnDef="estadoRegistro">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
-            <td mat-cell *matCellDef="let element"> {{element.estadoRegistro}} </td>
+            <td mat-cell *matCellDef="let element"> 
+                <span class="info-text info-text__table" [ngClass]="{'sin-diligenciar' : element.estadoRegistro=='Incompleto', 'completo' : element.estadoRegistro=='Completo'}"></span>
+                {{element.estadoRegistro}} </td>
         </ng-container>
         <ng-container matColumnDef="estadoDocumento">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Esatdo del documento </th>
@@ -38,8 +40,8 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button color="accent" class="btn-table"
-                (click)="this.gestionSolicitud(element.id)">
-                Gestionar solicitud</button>
+                (click)="this.verDetalleSolicitud(element.id)">
+                Ver detalle</button>
             </td>
         </ng-container>
 
